--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Doto:wght@100..900&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Doto:wght@100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
 @import "tailwindcss";
 
 .doto-font {
@@ -10,8 +10,8 @@
   font-variation-settings: "ROND" 0;
 }
 
-.playfair-display-font {
-  font-family: "Playfair Display", serif;
+.inter-font {
+  font-family: "Inter", serif;
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
@@ -19,14 +19,13 @@
 
 @theme {
   --font-doto: "Doto", serif;
-  --font-playfair-display: "Playfair Display", serif;
+  --font-inter: "Inter", serif;
 }
 
 body {
   @apply bg-neutral-950 text-neutral-100 max-w-[90%] md:max-w-[70%] mx-auto;
 }
 
-.text-shadow-glow {
-  text-shadow: 0 0 10px rgba(255, 255, 255, 0.7),
-    0 0 20px rgba(255, 255, 255, 0.3);
+::selection {
+  @apply bg-neutral-800/50;
 }
